    stub from Dist::Zilla
  - Convert README to README.md
  - Fix the documentation in the main module, IO::Stringy to better indicate
    where to get info and how to use the module
  - Fix the dist's META information to indicate the original author and license
  - Add a LICENSE file
  - Get rid of the set-version.pl file as it's no longer needed

2.111    2015-04-22
  - Update maintainer's name, which is now Dianne Skoll.

2.110    2005-02-10
  - Maintainership taken over by DSKOLL <dfs@roaringpenguin.com>
  - RT 2208 IO::ScalarArray->getline does not return undef for EOF if
    undef($/)
  - RT 7132 IO-stringy/Makefile.PL bug - name should be module name
  - RT 11249 IO::Scalar flush shouldn't return undef
  - RT 2172 $\ (output record separator) not respected
  - RT 8605 IO::InnerFile::seek() should return 1 on success
  - RT 4798 *.html in lib/

2.109    2003-12-21
  - IO::Scalar::getline now works with ref to int. *Dominique Quatravaux*
  - RT 4369 Improvement: handling of fixed-size reads in IO::Scalar

2.108    2001-08-20
  - The terms-of-use have been placed in the distribution file
    "COPYING". Also, small documentation tweaks were made.

2.105    2001-08-09
  - Added support for various seek() whences to IO::ScalarArray.
  - Added support for consulting $/ in IO::Scalar and IO::ScalarArray.
  - The old "use_RS()" is not even an option. Unsupported record
    separators will cause a croak().
  - Added a lot of regression tests to supoprt the above.
  - Better on-line docs (hyperlinks to individual functions).

2.103    2001-08-08
  - After sober consideration I have reimplemented IO::Scalar::print()
    so that it once again always seeks to the end of the string.
    Benchmarks show the new implementation to be just as fast as
    Juergen's contributed patch; until someone can convince me
    otherwise, the current, safer implementation stays.
  - I thought more about giving IO::Scalar two separate handles, one for