@@ -1,0 +1,71 @@
+sudo: false
+addons:
+  apt:
+    packages:
+      - aspell
+      - aspell-en
+language: perl
+perl:
+  - "blead"
+  - "blead-thr"
+  - "5.30"
+  - "5.30-thr"
+  - "5.28"
+  - "5.28-thr"
+  - "5.26"
+  - "5.26-thr"
+  - "5.24"
+  - "5.24-thr"
+  - "5.22"
+  - "5.22-thr"
+  - "5.20"
+  - "5.20-thr"
+  - "5.18"
+  - "5.18-thr"
+  - "5.16"
+  - "5.16-thr"
+  - "5.14"
+  - "5.14-thr"
+  - "5.12"
+  - "5.12-thr"
+  - "5.10"
+  - "5.10-thr"
+  - "5.8"
+  - "5.8-thr"
+env:
+  global:
+    - TEST_PARTITIONS=4
+    - AUTHOR_TESTING=1
+    - AUTOMATED_TESTING=1
+    - RELEASE_TESTING=1
+matrix:
+  include:
+    - perl: "5.20"
+      env: COVERAGE=1 TEST_PARTITION=1
+    - perl: "5.20"
+      env: COVERAGE=1 TEST_PARTITION=2
+    - perl: "5.20"
+      env: COVERAGE=1 TEST_PARTITION=3
+    - perl: "5.20"
+      env: COVERAGE=1 TEST_PARTITION=4
+cache:
+  directories:
+    - $HOME/perl5
+before_install:
+  - git clone git://github.com/travis-perl/helpers ~/travis-perl-helpers
+  - source ~/travis-perl-helpers/init --always-upgrade-modules
+  - build-perl
+  - perl -V
+  - build-dist
+  - cd $BUILD_DIR
+install:
+  - cpan-install --deps Test::Spelling Test::Pod Test::Pod::Coverage Test::Version Test::EOL
+  - cpan-install --coverage
+before_script:
+  - coverage-setup
+script:
+  - perl Makefile.PL
+  - make
+  - prove -v -r -b -s -j$(test-jobs) $(test-files)
+after_success:
+  - coverage-report
